SFDCProject/src/objects/Contact_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Area_Of_Expertise2__c</fullName>
        <label>Area Of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Best Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Depot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Branch1__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>South Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oregon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Luis Obispo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ventura</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Skills</relationshipLabel>
        <relationshipName>Contact_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expertise_Description__c</fullName>
        <label>Expertise Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Skill_Level__c</fullName>
        <label>Skill Level</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill_Type__c</fullName>
        <label>Skill Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Contact Skill</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Contact Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>